# helik

./: .gitignore  .pylintrc  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: build.yml  pylint.yml
imgsrc/: 0.xcf  2.xcf  4.xcf  6.xcf  7.xcf  alfabet.xcf  digits.xcf
include/: app.h  board.h
pysrc/helik/: __main__.py  app.py  arena.py  config.py  gfx.py  hdefs.py  htypes.py  locale.py  res.py  resources.py  utils.py
pysrc/helik/boards/: about.py  game.py  help.py  hiscores.py  menu.py  options.py  quit.py  settings.py  standard.py  welcome.py
pysrc/helik/game/: ammo.py  birds.py  buildings.py  bullets.py  clouds.py  collision.py  copter.py  data.py  dirc.py  distance.py  explosion.py  factory.py  level.py  objects.py  planes.py  player.py  standard.py  utils.py
pysrc/helik/media/: audio.py
pysrc/helik/modes/: init.py  killed.py  newlevel.py  paused.py  play.py  prepare.py  selectplayer.py  standard.py
pysrc/helik/resources/: 1.xcf  3.xcf  5.xcf  8.xcf  9.xcf  colors.json  digits.xcf  fonts.json  images.json  levels.json  meta.json  sounds.json
src/: app.cc  board.cc  main.cc
