[metadata]
name = helik
version = 0.0.0

author = Marcin Bielewicz
author_email = marcin.bielewicz@gmail.com
description = Flappycopter-like game
long_description = file: README.md
long_description_content_type = text/markdown
url = https://iostream.pl/helik-en
project_urls =
    Bug Tracker = https://iostream.pl/helik-en
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Topic :: Games/Entertainment :: Side-Scrolling/Arcade Games
license = GPL-3.0-or-later

[options]
package_dir =
    = pysrc
packages = find:
python_requiress = >= 3.11
include_package_data = True

[options.packages.find]
where = pysrc

[options.package_data]
helik = resources/*.png, resources/*.json
* = README.md
